hsmc-macros/tests/ui/t9_2_missing_default.stderr
error: state `Parent` has children but no `default` declaration
  --> tests/ui/t9_2_missing_default.rs:13:11
   |
13 |     state Parent {
   |           ^^^^^^

error[E0405]: cannot find trait `MActions` in this scope
  --> tests/ui/t9_2_missing_default.rs:20:6
   |
20 | impl MActions for MActionContext<'_> {
   |      ^^^^^^^^ not found in this scope

error[E0425]: cannot find type `MActionContext` in this scope
  --> tests/ui/t9_2_missing_default.rs:20:19
   |
20 | impl MActions for MActionContext<'_> {
   |                   ^^^^^^^^^^^^^^ not found in this scope
